  if package version is greater then 2.0.4 as it brings dependencies
  like plone.dexterity witch conflict with other packages found in
  the current Plone release.
  [alecghica]
- Fixed register users form to work for the case when
  Products.UserAndGroupSelectionWidget is not installed/used
  [alecghica]
- Added info on how to make plone.dexterity optional
  [alecghica]
- Explicitly store XMPP server's hostname instead of only using the XMPP 
  domain. Also store the port number instead of only using the default.
  [jcbrand]

------------------
0.1a6 (2012-11-22)
------------------

- Added Spanish translation.
  [macagua]
- Added improvements about i18n support.
  [macagua]
- Bugfix. Prevent getAllMemberIds from returning duplicates.
  [jcbrand]

------------------
0.1a5 (2012-11-19)
------------------

- Fixed RST formatting bugs.
  [jcbrand]

------------------
0.1a4 (2012-11-19)
------------------

- Documentation updated
  [jcbrand]
- Fixed HISTORY.txt markup
  [alecghica]
- Fixed version used for Products.UserAndGroupSelectionWidget to >2.04
  as earlier version will crash due to API changes
  [ghicaale]
- Bugfix. Password utility forgets user passwords when a user is registered.
  [jcbrand]

------------------
0.1a3 (2012-11-09)
------------------

- Bugfix for RuntimeError that might occur when upgrading from 0.1a1 to 0.1a2
  [jcbrand]

------------------
0.1a2 (2012-11-09)
------------------

- Add control panel configlet for configuration and registering XMPP users.
  [jcbrand]
- Add support for PAS plugins (such as LDAP).
  [jcbrand]

------------------
0.1a1 (2012-10-18)
------------------

- Forked from jarn.xmpp.core 0.34
  [jcbrand]
- Merged in jarn.xmpp.twisted 0.1
  [jcbrand]
- Removed all PubSub and Messaging related features.
  [jcbrand]
- Add browserlayer and check for it when handling events.
  [jcbrand]
- Fixed the @@setup-xmpp script to only register the next user once the previous one
  has finished.
  [jcbrand]
